fixed horizontal scroll on mobile

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,9 +15,9 @@ Lighter blue: #00C4E7
 body {
   background-color: #fff;
   font-family: 'Montserrat', sans-serif;
-  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   margin: 0;
+  width: 100%;
 } 
 
 /* ----------------------------------------------- */
@@ -25,7 +25,6 @@ body {
 /* ----------------------------------------------- */
 
 h1 {
-  font-family: 'Montserrat';
   font-size: 2.5rem;
   font-weight: 700;
   margin: 0;
@@ -33,7 +32,6 @@ h1 {
 }
 
 h2 {
-  font-family: 'Montserrat';
   font-weight: 600;
 }
 
@@ -45,18 +43,13 @@ h2 {
 	background-color: #f4f4f4;
 }
 
-.container {
-  margin: 0 auto;
-  width: 320px;
-}
-
-.portfolio-article {
-  padding: 1rem;
-}
-
 .portfolio-heading-container {
 	display: flex;
 	justify-content: center;
+}
+
+.container {
+  margin: 0 auto;
 }
 
 .portfolio-heading {
@@ -70,88 +63,9 @@ h2 {
 	text-transform: uppercase;
 }
 
-.intro-paragraph {
-  font-family: 'Montserrat';
-  font-weight: 400;
-  line-height: 1.81rem;
-  padding: 3rem 1.5rem;
-  margin: 0;
+.portfolio-article {
+  padding: 1rem 0;
 }
-
-.tech-paragraph {
-  font-family: 'Montserrat';
-  font-weight: 400;
-  line-height: 1.81rem;
-  margin: 0;
-  padding: 0 1.5rem 1.5rem;
-  text-align: center;
-}
-
-.image-container {
-	position: relative;
-  margin: 0 1.4rem;
-}
-
-.overlay {
-  /* Fallback color */
-  background-color: #1c1c1d;
-  background-color: rgba(5, 5, 5, 0.712);
-  bottom: 0;
-	left: 0;
-  position: absolute;
-	right: 0;
-  top: 0;
-}
-
-.image {
-  display: block;
-	width: 100%;
-}
-
-.project-title-container {
-  color: #fff;
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-transform: uppercase;
-  text-justify: center;
-  font-size: 16px;
-}
-
-.portfolio-link {
-  text-decoration: none;
-  color: #fff;
-}
-
-.project-heading {
-  text-transform: uppercase;
-  margin-bottom: 1rem;
-  font-size: 17px;
-  font-weight: bold;
-  color: #0078AE;
-}
-
-.project-description {
-  font-family: 'Roboto';
-  padding: 1rem 1.5rem 2rem;
-  font-weight: 400;
-  color: #000;
-}
-
-.tag-container {
-  font-family: 'Roboto';
-  font-weight: 400;
-  font-size: 13px;
-}
-
-.tech-tag {
-  background: #00C4E7;
-  padding: 0.3rem;
-  margin-right: 0.3rem;
-}
-
 
 /* ----------------------------------------------- */
 /*                    HEADER                       */
@@ -167,6 +81,7 @@ h2 {
   height: 32.5rem;
   justify-content: center;
   width: 100%;
+  margin: 0;
 }
 
 .profile-pic {
@@ -178,6 +93,10 @@ h2 {
   top: 12.5rem;
   width: 10rem;
   z-index: 1;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
 }
 
 .nav-container {
@@ -215,13 +134,86 @@ h2 {
 /*                SUMMARY SECTION                  */
 /* ----------------------------------------------- */
 
+.intro-paragraph {
+  font-weight: 400;
+  line-height: 1.81rem;
+  padding: 3rem 1.5rem;
+  margin: 0;
+}
+
 /* ----------------------------------------------- */
 /*                  TECH SECTION                   */
 /* ----------------------------------------------- */
 
+.tech-paragraph {
+  font-weight: 400;
+  line-height: 1.81rem;
+  margin: 0;
+  padding: 0 1.5rem 1.5rem;
+  text-align: center;
+}
+
 /* ----------------------------------------------- */
 /*                FEATURED PROJECTS                */
 /* ----------------------------------------------- */
+
+
+.image-container {
+	position: relative;
+  margin: 0 1.4rem;
+}
+
+.overlay {
+  /* Fallback color */
+  background-color: #1c1c1d;
+  background-color: rgba(46, 41, 41, 0.301);
+  bottom: 0;
+	left: 0;
+  position: absolute;
+	right: 0;
+  top: 0;
+}
+
+.overlay:hover {
+  display: none;
+}
+
+.project-image {
+  display: block;
+	width: 100%;
+}
+
+.portfolio-link {
+  text-decoration: none;
+  color: #fff;
+}
+
+.project-heading {
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+  font-size: 17px;
+  font-weight: bold;
+  color: #0078AE;
+}
+
+.project-description {
+  font-family: 'Roboto';
+  padding: 0 1.5rem 2rem;
+  font-weight: 400;
+  color: #000;
+}
+
+.tag-container {
+  font-family: 'Roboto';
+  font-weight: 400;
+  font-size: 13px;
+}
+
+.tech-tag {
+  background: #00C4E7;
+  padding: 0.3rem;
+  margin-right: 0.3rem;
+}
 
 /* ----------------------------------------------- */
 /*                 OTHER PROJECTS                  */
@@ -231,19 +223,31 @@ h2 {
   color:#0078AE;
   font-size: 1.2rem;
   margin-top: 2rem;
-  margin-bottom: 2rem;
   padding: 3px;
 	text-align: center;
 	text-transform: uppercase;
-}
+} 
 
 /* ----------------------------------------------- */
 /*                THOUGHTS SECTION                 */
 /* ----------------------------------------------- */
 
+.main-thoughts-article {
+  margin: 0;
+  padding: 0 0 2rem;
+}
+
+/* ----------------------------------------------- */
+/*                MORE THOUGHTS SECTION            */
+/* ----------------------------------------------- */
+
+.thoughts-article {
+  padding: 0;
+}
+
 .thoughts-description {
   display: inline-block;
-  padding: 1rem 1.5rem 2rem;
+  padding: 1rem 1.5rem;
 }
 
 .thoughts-description em {
@@ -258,18 +262,22 @@ h2 {
 
 .thoughts-text {
   font-size: 14px;
+  margin: 0;
 }
 
 /* ----------------------------------------------- */
 /*                SKILLS SECTION                   */
 /* ----------------------------------------------- */
-
+ 
 .skills-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-gap: 10px;
-  align-items: stretch;
-  padding: 1rem;
+  grid-gap: 25px;
+  align-items:stretch; 
+  justify-items: center;
+  padding: 0 0 2rem;
+  width: 272px;
+  margin: 0 1.5rem 2rem;
 }
 
 .skills-heading {
@@ -278,6 +286,17 @@ h2 {
   font-size: 17px;
   font-weight: bold;
   color: #0078AE;
+} 
+
+.skills-container {
+  width: 90px;
+}
+
+.skills-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 5rem;
 }
 
 /* ----------------------------------------------- */
@@ -298,7 +317,8 @@ h2 {
   filter: invert(42%) sepia(71%) saturate(6111%) hue-rotate(179deg) brightness(87%) contrast(101%);
   width: 4rem;
   height: auto;
-}
+  -webkit-filter: invert(42%) sepia(71%) saturate(6111%) hue-rotate(179deg) brightness(87%) contrast(101%);
+} 
 
 /* ----------------------------------------------- */
 /*                     FOOTER                      */
@@ -312,7 +332,7 @@ footer {
 
 .contact {
   height: 150px;
-  padding: 70px 0;
+  padding: 10% 0;
   text-align: center;
 }
 
@@ -323,7 +343,6 @@ footer {
 }
 
 .contact-info {
-  font-family: 'Montserrat';
   color: #fff;
   list-style: none;
   padding: 10px 0;
@@ -332,12 +351,12 @@ footer {
 
 .contact-info a {
   color: #fff;
-}
+} 
 
 /* ----------------------------------------------- */
 /*                  MEDIA QUERIES                  */
 /* ----------------------------------------------- */
-
+/* 
 @media (min-width: 768px) {
 	.container {
     margin: 0 auto;
@@ -364,4 +383,4 @@ footer {
   box-shadow: 0 0 0 10px #31ace6;
   transition: ease;
 }
-}
+} */
